RESOLVED FIXED265993
Fix WPT canvas tests 2d.text.font.parse.family by serializing font family names as needed
https://bugs.webkit.org/show_bug.cgi?id=265993
Summary Fix WPT canvas tests 2d.text.font.parse.family by serializing font family nam...
Gerald Squelart
Reported 2023-12-07 05:57:26 PST
The following WPT tests fail: - LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.font.parse.family-expected.txt: - LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.font.parse.family-expected.txt: - LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.font.parse.family.worker-expected.txt: because a quoted font family is returned un-quoted when output in the canvas rendering context's `font`.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-07 05:57:35 PST
Gerald Squelart
Comment 2 2023-12-07 06:30:12 PST
EWS
Comment 3 2023-12-09 05:40:32 PST
Committed 271804@main (b94074dc2373): <https://commits.webkit.org/271804@main> Reviewed commits have been landed. Closing PR #21393 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.