Serialize canvas font families as needed https://bugs.webkit.org/show_bug.cgi?id=265993 rdar://problem/119312574

Reviewed by Dean Jackson.

In a canvas rendering context, the `font` attribute contains a list of font families,
which should only contain valid CSS custom-ident's and strings (in quotes, with escaped
characters as appropriate).

The original code used to only serialize family names with spaces in them, which could
have missed some cases, such as the one in the WPT test
2d.text.drawing.style.absolute.spacing.html: `QuotedFont\",` and others.

This patch uses the CSS markup function serializeFontFamily to serialize the canvas
rendering context's `font` family names when needed.

* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/text/2d.text.font.parse.family-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.font.parse.family-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/offscreen/text/2d.text.font.parse.family.worker-expected.txt:
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::State::fontString const):

Canonical link: https://commits.webkit.org/271804@main